src/test/deca/context/invalid/created/binary_exp/op_arith/mult_boolean_float.deca
// Description :
//    test mult entre un boolean et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type boolean, L’opérande droite est de type float. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur *
class A{}
{
boolean a;
float b;
int c = a * b;
}
